--- a/template/base/header.html
+++ b/template/base/header.html
@@ -65,7 +65,7 @@
                              <li class="nav-item active"><a class="nav-link" href="{% url 'login' %}">ورود</a></li>
                         {% endif %}
                         <li class="nav-item active"><a class="nav-link" href="{% url 'home' %}">خانه</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">درباره ما</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">درباره ما</a></li>
                         <li class="dropdown megamenu-fw">
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">محصولات</a>
                             <ul class="dropdown-menu megamenu-content" role="menu">
