--- a/template/account/full_name.html
+++ b/template/account/full_name.html
@@ -206,7 +206,7 @@
                             <hr>
                             <div class="row">
                                 <div class="col-sm-12 text-right">
-                                    <h6 class="mb-0"><a href="{% url 'addresses' %}">آدرس ها</a></h6>
+                                    <h6 class="mb-0"><a href="{% url 'addresses' %}" class="font-weight-bold" style="font-size: large">آدرس ها</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -227,6 +227,7 @@
             </div>
         </div>
     </div>
+
     <!-- Start Cart  -->
     <div class="cart-box-main">
         <div class="container">
@@ -238,94 +239,25 @@
                     </a></h5>
                     <form class="mt-3 collapse review-form-box" id="formRegister">
                         <div class="container light-style flex-grow-1 container-p-y">
-
-                            <div class="card overflow-hidden">
-                                <div class="row no-gutters row-bordered row-border-light">
-                                    <div class="col-md-3 pt-0">
-                                        <div class="list-group list-group-flush account-settings-links">
-                                            <a class="list-group-item list-group-item-action active" data-toggle="list"
-                                               href="#account-general">General</a>
-                                            <a class="list-group-item list-group-item-action" data-toggle="list"
-                                               href="#account-change-password">Change password</a>
-                                        </div>
+                            <div class="col-sm-6 col-lg-6 mb-3">
+                                <form method="POST" action="{% url 'create_name' %}"
+                                      class="mt-3 collapse review-form-box" id="formRegister">
+                                    <div class="form-row">
+                                        <div class="form-group col-md-6">
+                                            <label for="id_first_name" class="mb-0 text-dark">نام</label>
+                                            <input type="text" class="form-control" id="id_first_name" name="first_name"
+                                                   placeholder="نام"></div>
+                                        <div class="form-group col-md-6">
+                                            <label for="id_last_name" class="mb-0 text-dark">نام خانوادگی</label>
+                                            <input type="text" class="form-control" id="id_last_name" name="last_name"
+                                                   placeholder="نام خانوادگی"></div>
+                                        <div class="form-group col-md-6">
+                                            <label for="id_mobile" class="mb-0 text-dark">موبایل</label>
+                                            <input type="text" class="form-control" id="id_mobile" name="mobile"
+                                                   placeholder="موبایل"></div>
                                     </div>
-                                    <div class="col-md-9">
-                                        <div class="tab-content">
-                                            <div class="tab-pane fade active show" id="account-general">
-
-                                                <div class="card-body media align-items-center">
-                                                    {% if user.image %}
-                                                        <img id="update_image" src="{{ user.image.url }}" alt=""
-                                                             class="d-block ui-w-80">
-                                                    {% endif %}
-
-                                                    <div class="media-body ml-4">
-                                                        <form method="post" action="{% url 'change_image' %}" enctype="multipart/form-data" >
-                                                            <input type="file" class="bg-gray-300" id="change_image">
-                                                            <button type="submit">Reset</button>
-                                                        </form>
-
-
-                                                        <div class="text-light small mt-1">Allowed JPG, GIF or PNG. Max
-                                                            size of 800K
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <hr class="border-light m-0">
-
-                                                <div class="card-body">
-                                                    <div class="form-group">
-                                                        <label class="form-label">First name</label>
-                                                        <input type="text" class="form-control mb-1" value="nmaxwell">
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <label class="form-label">Last name</label>
-                                                        <input type="text" class="form-control" value="Nelle Maxwell">
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <label class="form-label">E-mail</label>
-                                                        <input type="text" class="form-control mb-1"
-                                                               value="nmaxwell@mail.com">
-                                                        <div class="alert alert-warning mt-3">
-                                                            Your email is not confirmed. Please check your inbox.<br>
-                                                            <a href="javascript:void(0)">Resend confirmation</a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <label class="form-label">Mobile</label>
-                                                        <input type="text" class="form-control" value="Company Ltd.">
-                                                    </div>
-                                                </div>
-
-                                            </div>
-                                            <div class="tab-pane fade" id="account-change-password">
-                                                <div class="card-body pb-2">
-
-                                                    <div class="form-group">
-                                                        <label class="form-label">Current password</label>
-                                                        <input type="password" class="form-control">
-                                                    </div>
-
-                                                    <div class="form-group">
-                                                        <label class="form-label">New password</label>
-                                                        <input type="password" class="form-control">
-                                                    </div>
-
-                                                    <div class="form-group">
-                                                        <label class="form-label">Repeat new password</label>
-                                                        <input type="password" class="form-control">
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="text-right mt-3">
-                                <button type="button" class="btn btn-primary">Save changes</button>&nbsp;
-                                <button type="button" class="btn btn-default">Cancel</button>
+                                    <button type="submit" class="btn hvr-hover">انجام</button>
+                                </form>
                             </div>
                         </div>
                     </form>
@@ -338,7 +270,7 @@
 {% endblock %}
 {% block javascript %}
     <script>
-        function change_image(){
+        function change_image() {
             console.log('salam')
             var image = $(`#update_image`).val()
             var data = JSON.stringify({'image': image})
@@ -354,7 +286,7 @@
                     $(`#update_image`).attr('src', `${data.image}`)
                 },
             })
-            }
+        }
     </script>
 
 {% endblock %}
