--- a/template/account/orders.html
+++ b/template/account/orders.html
@@ -6,10 +6,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Addresses</h2>
+                    <h2>سفارش ها</h2>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="#">Shop</a></li>
-                        <li class="breadcrumb-item active">Addresses</li>
+                        <li class="breadcrumb-item"><a href="{% url 'home' %}">خانه</a></li>
+                        <li class="breadcrumb-item active">سفارش ها</li>
                     </ul>
                 </div>
             </div>
@@ -20,7 +20,7 @@
     <!-- Start Wishlist  -->
     <div class="wishlist-box-main">
         <div class="container">
-            <div class="row">
+            <div class="row text-right">
                 {% for order in orders %}
                     <div class="col-sm-12 col-lg-12 mb-3">
                         <h3><a data-toggle="collapse" href="#formRegister{{ order.id }}" role="button"
