--- a/template/order/cart.html
+++ b/template/order/cart.html
@@ -65,7 +65,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-2 d-flex shopping-box"><a href="{% url 'zarrin_pall' %}" class="ml-auto btn hvr-hover">صفحه پرداخت</a> </div>
+                <div class="col-2 d-flex shopping-box">
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'zarrin_pall' %}" class="ml-auto btn hvr-hover">صفحه پرداخت</a>
+                    {% else %}
+                        <a href="{% url 'login' %}" class="ml-auto btn hvr-hover" onclick="alert('کجا میخوای بری؟ حاجی اول باید وارد بشی')">صفحه پرداخت</a>
+                    {% endif %}
+
+                </div>
             </div>
 
 
